[package]
name = "cyrus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.12" }
serde = "1.0.130"
serde_json = "1.0.72"
log = "0.4.14"
redis-async = { version = "0.12.0", features = [ "tokio10" ] }
env_logger = "0.9.0"
figment = { version = "0.10.6", features = [ "toml", "env" ] }
reqwest = { version = "0.11.8", features = [ "rustls" ] }
webhook = { git = "https://github.com/Melon-Development-ZUI/webhook" }
tokio = "0.14.0"